// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders correctly 1`] = `
<div
  className="container"
>
  <div
    className="box"
  >
    <label
      className="label"
    >
      Hent brukerinfo
    </label>
    <Button
      hoverIconLeft="TEST_FILE_STUB"
      iconLeft="TEST_FILE_STUB"
      onClick={[Function]}
      text="Logg inn"
    />
    <label
      className="label"
    >
      Ingen online.ntnu.no-bruker?
    </label>
    <div
      className="userinfoSwitch"
    >
      <ToggleSwitch
        checked={false}
        disabled={false}
        onChange={[Function]}
      />
      <span>
        Fyll inn brukerinfo selv
      </span>
    </div>
  </div>
  <div
    className="box"
  >
    <Input
      disabled={true}
      label="Navn"
      name="name"
      onChange={[Function]}
      placeholder="Navn"
      type="text"
      value=""
    />
    <Input
      disabled={true}
      label="E-Postadresse"
      name="email"
      onChange={[Function]}
      placeholder="Mailadresse"
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`Login renders with user info 1`] = `
<div
  className="container"
>
  <div
    className="box"
  >
    <label
      className="label"
    >
      Hent brukerinfo
    </label>
    <Button
      hoverIconLeft="TEST_FILE_STUB"
      iconLeft="TEST_FILE_STUB"
      onClick={[Function]}
      text="Logg inn"
    />
    <label
      className="label"
    >
      Ingen online.ntnu.no-bruker?
    </label>
    <div
      className="userinfoSwitch"
    >
      <ToggleSwitch
        checked={false}
        disabled={false}
        onChange={[Function]}
      />
      <span>
        Fyll inn brukerinfo selv
      </span>
    </div>
  </div>
  <div
    className="box"
  >
    <Input
      disabled={true}
      label="Navn"
      name="name"
      onChange={[Function]}
      placeholder="Navn"
      type="text"
      value="Name"
    />
    <Input
      disabled={true}
      label="E-Postadresse"
      name="email"
      onChange={[Function]}
      placeholder="Mailadresse"
      type="email"
      value=""
    />
  </div>
</div>
`;

exports[`Login renders with user info and logged in 1`] = `
<div
  className="container"
>
  <div
    className="box"
  >
    <label
      className="label"
    >
      Hent brukerinfo
    </label>
    <Button
      hoverIconLeft="TEST_FILE_STUB"
      iconLeft="TEST_FILE_STUB"
      onClick={[Function]}
      text="Logg ut"
    />
    <label
      className="label"
    >
      Ingen online.ntnu.no-bruker?
    </label>
    <div
      className="userinfoSwitch"
    >
      <ToggleSwitch
        checked={false}
        disabled={true}
        onChange={[Function]}
      />
      <span>
        Fyll inn brukerinfo selv
      </span>
    </div>
  </div>
  <div
    className="box"
  >
    <Input
      disabled={true}
      label="Navn"
      name="name"
      onChange={[Function]}
      placeholder="Navn"
      type="text"
      value="Name"
    />
    <Input
      disabled={true}
      label="E-Postadresse"
      name="email"
      onChange={[Function]}
      placeholder="Mailadresse"
      type="email"
      value=""
    />
  </div>
</div>
`;
